@@ -1,5 +1,7 @@
 2002-02-22  Ian Lance Taylor  <ian@airs.com>
 
+	* unix/serial.c (asSbaud_table): Add more entries.
+
 	* uucp.c (uchelp): Correct text: -u is like --user, not --usage.
 
 	* John Hughes: uucp.c (asClongopts): Correct --noexpand to -W.
